--- a/p1.ipynb
+++ b/p1.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "<Axes: xlabel='class', ylabel='count'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,13 +261,292 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 데이터 프레임은 행과 열로 구성되어있는 데이터이다. 과연 데이터가 많을때(행 또는 열이 많다.) 행이 많은게 좋을까, 열이 많은게 좋을까?    \n",
+    "- 정답은 열이 많은 것이 더 좋다고 한다. 행이 많아지더라도 분석 기술 면에서는 별다른 차이가 생기지 않는다.   \n",
+    "- 하지만 열이 많아진다면 분석할 때 변수를 조합할 수 있는 경우의 수가 늘어난다.   \n",
+    "- 예를 들어서 학점 별 연봉 관계 를 분석하다가 열로 지역이 들어왔다고 해보자.    \n",
+    "- 이럴 때 더 다채롭게 조합해서 분석할 수 있다.   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   학번  eng score  math score\n",
+      "0   1         90          40\n",
+      "1   2         80          50\n",
+      "2   3         60          80\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({'학번': [1,2,3],\n",
+    "                   'eng score': [90,80,60],\n",
+    "                   'math score': [40,50,80]})\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230\n",
+      "        학번  eng score  math score\n",
+      "count  3.0   3.000000    3.000000\n",
+      "mean   2.0  76.666667   56.666667\n",
+      "std    1.0  15.275252   20.816660\n",
+      "min    1.0  60.000000   40.000000\n",
+      "25%    1.5  70.000000   45.000000\n",
+      "50%    2.0  80.000000   50.000000\n",
+      "75%    2.5  85.000000   65.000000\n",
+      "max    3.0  90.000000   80.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sum을 이용해서 english score 합계 계산\n",
+    "print(df['eng score'].sum())\n",
+    "#describe를 사용해서 여러가지 통계 확인\n",
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        제품           가격        판매량\n",
+      "count  3.0     3.000000   3.000000\n",
+      "mean   2.0  2100.000000  25.000000\n",
+      "std    1.0   793.725393  12.529964\n",
+      "min    1.0  1500.000000  13.000000\n",
+      "25%    1.5  1650.000000  18.500000\n",
+      "50%    2.0  1800.000000  24.000000\n",
+      "75%    2.5  2400.000000  31.000000\n",
+      "max    3.0  3000.000000  38.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.DataFrame({'제품':[1,2,3],\n",
+    "                    '가격':[1800,1500,3000],\n",
+    "                    '판매량':[24,38,13]})\n",
+    "\n",
+    "print(df1.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id  nclass  math  english  science\n",
+      "0   1       1    50       98       50\n",
+      "1   2       1    60       97       60\n",
+      "2   3       1    45       86       78\n",
+      "3   4       1    30       98       58\n",
+      "4   5       2    25       80       65\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_2 = pd.read_excel('./excel_exam.xlsx')\n",
+    "print(df_2.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             id     nclass       math    english    science\n",
+      "count  20.00000  20.000000  20.000000  20.000000  20.000000\n",
+      "mean   10.50000   3.000000  57.450000  84.900000  59.450000\n",
+      "std     5.91608   1.450953  20.299015  12.875517  25.292968\n",
+      "min     1.00000   1.000000  20.000000  56.000000  12.000000\n",
+      "25%     5.75000   2.000000  45.750000  78.000000  45.000000\n",
+      "50%    10.50000   3.000000  54.000000  86.500000  62.500000\n",
+      "75%    15.25000   4.000000  75.750000  98.000000  78.000000\n",
+      "max    20.00000   5.000000  90.000000  98.000000  98.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_2.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0  1   2   3   4\n",
+      "0  1  1  50  98  50\n",
+      "1  2  1  60  97  60\n",
+      "2  3  2  25  80  65\n",
+      "3  4  2  50  89  98\n",
+      "4  5  3  20  98  15\n"
+     ]
+    }
+   ],
+   "source": [
+    "#만약에 변수 명 없이 데이터로만 구성된 파일이 있을 때 불러오게 되면 columns 이름들이 데이터 변수로 들어가서 이상해진다. 이 경우 데이터 유실의 우려가 있으므로 꼭 처리해줘야한다.\n",
+    "\n",
+    "df_no_head = pd.read_excel('./excel_exam_novar.xlsx',header=None) #header에 None을 설정해줘서 처리할 수 있다. \n",
+    "print(df_no_head.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id  nclass  math  english  science\n",
+      "0   1       1    50       98       50\n",
+      "1   2       1    60       97       60\n",
+      "2   3       1    45       86       78\n",
+      "3   4       1    30       98       58\n",
+      "4   5       2    25       80       65\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./exam.csv')\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    id  nclass  math  english  science\n",
+      "15  16       4    58       98       65\n",
+      "16  17       5    65       68       98\n",
+      "17  18       5    80       78       90\n",
+      "18  19       5    89       68       87\n",
+      "19  20       5    78       83       58\n"
+     ]
+    }
+   ],
+   "source": [
+    "#뒷 부분 확인하기\n",
+    "print(df.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20 entries, 0 to 19\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column   Non-Null Count  Dtype\n",
+      "---  ------   --------------  -----\n",
+      " 0   id       20 non-null     int64\n",
+      " 1   nclass   20 non-null     int64\n",
+      " 2   math     20 non-null     int64\n",
+      " 3   english  20 non-null     int64\n",
+      " 4   science  20 non-null     int64\n",
+      "dtypes: int64(5)\n",
+      "memory usage: 932.0 bytes\n",
+      "None\n",
+      "id         int64\n",
+      "nclass     int64\n",
+      "math       int64\n",
+      "english    int64\n",
+      "science    int64\n",
+      "dtype: object\n",
+      "       id  nclass   math  english  science\n",
+      "0   False   False  False    False    False\n",
+      "1   False   False  False    False    False\n",
+      "2   False   False  False    False    False\n",
+      "3   False   False  False    False    False\n",
+      "4   False   False  False    False    False\n",
+      "5   False   False  False    False    False\n",
+      "6   False   False  False    False    False\n",
+      "7   False   False  False    False    False\n",
+      "8   False   False  False    False    False\n",
+      "9   False   False  False    False    False\n",
+      "10  False   False  False    False    False\n",
+      "11  False   False  False    False    False\n",
+      "12  False   False  False    False    False\n",
+      "13  False   False  False    False    False\n",
+      "14  False   False  False    False    False\n",
+      "15  False   False  False    False    False\n",
+      "16  False   False  False    False    False\n",
+      "17  False   False  False    False    False\n",
+      "18  False   False  False    False    False\n",
+      "19  False   False  False    False    False\n",
+      "id         0\n",
+      "nclass     0\n",
+      "math       0\n",
+      "english    0\n",
+      "science    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#변수 속성 파악하기 or 데이터타입 확인하기\n",
+    "print(df.info()) #모든 속성 \n",
+    "print(df.dtypes) #데이터 타입만\n",
+    "#info가 null의 여부까지 확인해주기 때문에 좋은 것 같다.\n",
+    "#nan 을 확인할 수 있는 방법은 또 있다\n",
+    "print(df.isna()) #T/F로 나타냄\n",
+    "print(df.isna().sum()) #몇개 있는지 보여줌"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#git test"
-   ]
+   "source": []
   }
  ],
  "metadata": {
